# simd-adler32

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.msrv.toml  rust-toolchain.toml
.github/workflows/: build.yaml  fuzz.yaml  main.yaml  publish.yaml
bench/: Cargo.toml  adler32.rs  all.rs  alts.rs  avx2.rs  avx512.rs  compete.rs  imp.rs  scalar.rs  sse2.rs  ssse3.rs  util.rs  variants.rs
bench/benches/: update.rs
fuzz/: Cargo.toml
fuzz/in/: 1  2  3  4  5
fuzz/targets/: avx2.rs  avx512.rs  neon.rs  sse2.rs  ssse3.rs
src/: arch.rs  hash.rs  lib.rs  markdown.rs  profile.rs  update.rs
src/arch/: mod.rs  scalar.rs  wasm.rs  x86.rs
src/arch/aarch64/: mod.rs  neon.rs
src/arch/wasm/: mod.rs  simd128.rs
src/arch/x86/: avx2.rs  avx512.rs  sse2.rs  ssse3.rs
src/arch/x86_64/: avx2.rs  avx512.rs  mod.rs  sse2.rs  ssse3.rs
src/imp/: avx2.rs  avx512.rs  avx512_vnni.rs  mod.rs  neon.rs  scalar.rs  sse2.rs  ssse3.rs  stdsimd.rs  wasm.rs
tests/: arch.rs  imp.rs
