[package]
name = "simd-adler32"
authors = ["Marvin Countryman <me@maar.vin>"]
license = "MIT"
version = "0.3.5"
edition = "2018"
keywords = ["simd", "avx2", "ssse3", "adler", "adler32"]
categories = ["algorithms", "no-std"]
repository = "https://github.com/mcountryman/simd-adler32"
description = "A SIMD-accelerated Adler-32 rolling hash algorithm implementation."
exclude = ["bench"]

[profile.release]
debug = true
opt-level = 2

[[bench]]
name = "all"
path = "bench/all.rs"
harness = false

[[bench]]
name = "avx2"
path = "bench/avx2.rs"
harness = false

[[bench]]
name = "avx512"
path = "bench/avx512.rs"
harness = false

[[bench]]
name = "scalar"
path = "bench/scalar.rs"
harness = false

[[bench]]
name = "sse2"
path = "bench/sse2.rs"
harness = false

[[bench]]
name = "ssse3"
path = "bench/ssse3.rs"
harness = false

[[bench]]
name = "compete"
path = "bench/compete.rs"
harness = false

[features]
default = ["std", "const-generics"]
std = []
nightly = []
const-generics = []

[dev-dependencies]
rand = "0.8"
criterion = "0.3"

# competition
adler = "1.0.2"
adler32 = "1.2.0"
