[package]
name = "simd-adler32"
authors = ["Marvin Countryman <me@maar.vin>"]
license = "MIT"
version = "0.3.9"
edition = "2018"
keywords = ["simd", "avx2", "ssse3", "adler", "adler32"]
categories = ["algorithms", "no-std"]
repository = "https://github.com/mcountryman/simd-adler32"
description = "A SIMD-accelerated Adler-32 hash algorithm implementation."
exclude = ["bench"]

[package.metadata]
msrv = "1.50.0"

[profile.release]
debug = true
opt-level = 2

[features]
default = ["std", "msrv_1_89_0"]
# Enable features that require rust-std
std = []
# Enable features that require nightly rust
nightly = []
# Enable features that require rustc >= 1.89.0
msrv_1_89_0 = ["msrv_1_61_0"]
# Enable features that require rustc >= 1.61.0
msrv_1_61_0 = []
